# golioth-esp-idf-sdk

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  ci_on_hardware.yml  lint_and_build.yml  test_esp32s3.yml
components/fw_update/: CMakeLists.txt  fw_update.c  fw_update.h
components/golioth_sdk/: CMakeLists.txt  Kconfig  golioth_coap_client.c  golioth_fw_update.c  golioth_lightdb.c  golioth_log.c  golioth_ota.c  golioth_rpc.c  golioth_statistic.c  golioth_statistics.c  golioth_status.c
components/golioth_sdk/include/: golioth.h  golioth_client.h  golioth_fw_update.h  golioth_lightdb.h  golioth_log.h  golioth_ota.h  golioth_rpc.h  golioth_statistic.h  golioth_status.h  golioth_time.h
components/golioth_sdk/priv_include/: golioth_coap_client.h  golioth_stats.h  golioth_util.h
components/golioth_shell/: CMakeLists.txt  README.md  cmd_system.c  cmd_wifi.c  golioth_shell.c  golioth_shell.h
components/golioth_wifi/: CMakeLists.txt  golioth_wifi.c  golioth_wifi.h
docs/: .firebaserc  OriginalLandingPage.md  README.md
docs/doxygen/: Doxyfile
example/: CMakeLists.txt
example/main/: Kconfig  app_main.c  fw_update.c  fw_update.h  nvs.c  nvs.h  shell.c  shell.h  wifi.c  wifi.h
examples/certificate_auth/: CMakeLists.txt
examples/coap_client/main/: CMakeLists.txt  coap_client_example_main.c
examples/coap_minimal/: CMakeLists.txt  sdkconfig.defaults
examples/coap_minimal/main/: CMakeLists.txt  app_main.c  golioth_status.c  golioth_status.h
examples/common/: fw_update.c  shell.c  wifi.c
examples/golioth_basics/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/golioth_basics/main/: CMakeLists.txt  app_main.c  fw_update.c  fw_update.h  shell.c  wifi.c  wifi.h
examples/golioth_rpc/main/: CMakeLists.txt  app_main.c
examples/magtag_demo/: CMakeLists.txt  README.md
examples/magtag_demo/main/: CMakeLists.txt  Kconfig  app_main.c  board.h  buttons.c  buttons.h  led_strip_rmt_ws2812.c  leds.c  leds.h  lis3dh.c  lis3dh.h  speaker.c  time.c  time.h  ws2812_led_strip.c  ws2812_led_strip.h
examples/magtag_demo/main/epaper/: EPD_2in9d.c  epaper.c  epaper.h
examples/ota/: CMakeLists.txt  sdkconfig.defaults
examples/ota/main/: CMakeLists.txt  app_main.c
examples/test/: CMakeLists.txt  README.md  flash_and_verify_serial_output.py  sdkconfig.defaults  standalone_flash.sh  tar_build.sh  verify.py
examples/test/main/: CMakeLists.txt  app_main.c
magtag/: CMakeLists.txt  sdkconfig.defaults
magtag/main/: CMakeLists.txt  app_main.c
scripts/git_hooks/: install_hooks.sh
scripts/lint/: check_clang_format.sh  format_all_files.sh
