idf_component_register(
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "priv_include"
    PRIV_REQUIRES
        "esp_libcoap"
        "json"
    SRCS
        "golioth_status.c"
        "golioth_coap_client.c"
        "golioth_log.c"
        "golioth_lightdb.c"
        "golioth_ota.c"
)
list(APPEND EXTRA_C_FLAGS_LIST
    -Werror
)
component_compile_options(${EXTRA_C_FLAGS_LIST})
