idf_component_register(
    INCLUDE_DIRS
        "."
        "epaper"
        "../../common"
    SRCS
        "app_main.c"
        "leds.c"
        "led_strip_rmt_ws2812.c"
        "buttons.c"
        "time.c"
        "i2c.c"
        "lis3dh.c"
        "speaker.c"
        "light_sensor.c"
        "epaper/epaper.c"
        "epaper/EPD_2in9d.c"
        "epaper/ImageData.c"
        "../../common/wifi.c"
    PRIV_REQUIRES
        "golioth_sdk"
        "json"
        "nvs_flash"
        "esp_adc_cal"
)
